# project_agent

./: .gitignore  README.md  main.py  requirements.txt
.devcontainer/: devcontainer.json
graph/: nodes.py  react.py
poetry/: pyproject.toml  requirements.txt
