[tool.poetry]
name = "project-agent"
version = "0.1.0"
description = ""
authors = ["Gianluca Lambruschini <gianluca.lambruschini@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
    python = "^3.11"
    langchain = "^1.3.2"
    langgraph = "^1.2.2"
    langchain-ollama = "^1.1.0"
    langchain-community = "^0.4.2"
    langchain-core = "^1.4.0"
    tavily-python = "^0.7.24"
    langchainhub = "^0.1.21"
    langsmith = "^0.8.6"
    beautifulsoup4 = "^4.14.3"
    langgraph-checkpoint-sqlite = "^3.1.0"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
